tests/NormalTests/paczka1/fuzzy1/45695681.err
Error in line 3: EJQHl5Y1p S37 26,1
Error in line 2: nJQAoq S37 45,4
Error in line 15: qs2zRa S37 37,2
Error in line 28: EJQHl5Y1p A72 3,05
Error in line 16: nJQAoq S867 102,6
Error in line 24: EJQHl5Y1p A72 1,0
